@@ -1,5 +1,9 @@
 07/12/2004 Bob Rossi <bob@brasko.net>
 
+    * configure.in: Changed version number to 0.5.0 for release
+
+07/12/2004 Bob Rossi <bob@brasko.net>
+
     * NEWS: Fixed a crash in TGDB (buffering commands). Added libkui to CGDB.
 
 06/14/2004 Bob Rossi <bob@brasko.net>
